--- a/app/views/irm/cards/index.html.erb
+++ b/app/views/irm/cards/index.html.erb
@@ -19,17 +19,17 @@
       <div class="pbBody">
         <div id="card_list" class="datatable" style="width:100%;">
           <div id="id" style="display:none">
-            <%= link_to(t(:edit),{:action=>"edit",:id=>"{id}"}) %>
-            <%= link_to(t(:show),{:action=>"show",:id=>"{id}"}) %>
+            <%= link_to(t(:edit),{:action=>"edit",:id=>"{id}"}) %>&nbsp;
+            <%= link_to(t(:show),{:action=>"show",:id=>"{id}"}) %>&nbsp;
+            <%= link_to(t(:label_irm_card_rule), {:action=>"edit_rule", :id =>"{id}"})%>
           </div>
         </div>
         <%= datatable("card_list",url_for(:action=>"get_data"),
-                  [{:key=>"id",:label=>t(:operation),:formatter=>"Y.irm.template",:width=>"80px"},
+                  [{:key=>"id",:label=>t(:operation),:formatter=>"Y.irm.template",:width=>"120px"},
                    {:key=>"card_code",:label=>t(:label_irm_card_code),:width=>"80px"},
                    {:key=>"name",:label=>t(:name),:width=>"150px"},
                    {:key=>"description",:label=>t(:description),:width=>"250px"},
                    {:key=>"background_color",:label=>t(:label_irm_card_background_color),:width=>"40px"},
-                   {:key=>"font_color",:label=>t(:label_irm_card_font_color),:width=>"40px"},
                    {:key=>"status_meaning",:label=>t(:active),:width=>"40px"}])%>
       </div>
     </div>
