--- a/app/views/irm/demo/index.html.erb
+++ b/app/views/irm/demo/index.html.erb
@@ -1,171 +1,1 @@
-<style>
-.kanban_body table{width:100%;}
-.kanban_body .card{
-    background-color:#f5f2bc;
-    margin:5px;
-    height:90px;
-    width: 150px;
-    border: 1px solid #808080;
-
-    -moz-border-radius: 5px 5px 5px 5px;
-    -webkit-border-top-left-radius: 3px;
-    -webkit-border-top-right-radius: 5px;
-    -webkit-border-bottom-right-radius: 5px;
-    -webkit-border-bottom-left-radius: 5px;
-
-    position:relative;
-
-
-    -moz-box-shadow: 0 2px 4px rgba(127, 127, 127, 0.6);
-    -webkit-box-shadow:rgba(127, 127, 127, 0.6) 0 2px 4px;
-    box-shadow: 0 2px 4px rgba(127, 127, 127, 0.6);
-}
-.kanban_body .card-title{text-align:center;font-weight:bold;font-size:14px;}
-.kanban_body .card-content{font-size:12px;}
-.kanban_body .card-date{bottom:2px;right:5px;position:absolute;color:#a0a0a0;}
-
-.kanban_body .td_l, .kanban_body .td_c, .kanban_body .td_r{height:500px;}
-.kanban_body .td_l{border-right: 1px solid #5bade9;}
-.kanban_body .td_r{border-left: 1px solid #5bade9;}
-.kanban_body .td_c{border-right: 1px solid #5bade9;border-left: 1px solid #5bade9;}
-
-.kanban_body .th_l, .kanban_body .th_c, .kanban_body .th_r{
-    height: 30px;
-    font-size: 18px;
-    vertical-align: middle;
-    font-weight: bold;
-    color: #ffffff;
-    background-color:#2191c0;
-}
-.kanban_body .th_l{border-right: 1px solid #ffffff;}
-.kanban_body .th_r{border-left: 1px solid #ffffff;}
-.kanban_body .th_c{border-right: 1px solid #ffffff;border-left: 1px solid #ffffff;}
-</style>
-
-<div class="kanban_body" style="width:100%;">
-  <table cellspacing="0" cellpadding="0">
-    <tr>
-      <th align="center" class="th_l">
-        <div>新到达待我回复事故单</div>
-      </th>
-      <th align="center" class="th_c">
-        <div>客户反馈的事故单</div>
-      </th>
-      <th align="center" class="th_c">
-        <div>待我审批的</div>
-      </th>
-      <th align="center" class="th_r">
-        <div>今天我完成的事故单</div>
-      </th>
-    </tr>
-    <tr>
-      <td align="center" class="td_l">
-        <div class="card">
-          <table>
-            <tr>
-              <td class="card-title">标题</td>
-            </tr>
-            <tr>
-              <td class="card-content">腾龙AR模块收款功能中付款方法项目增加还有问题</td>
-            </tr>
-          </table>
-          <div class="card-date">12:30</div>
-        </div>
-        <div class="card">
-          <table>
-            <tr>
-              <td class="card-title">标题</td>
-            </tr>
-            <tr>
-              <td class="card-content">腾龙AR模块收款功能中付款方法项目增加还有问题</td>
-            </tr>
-          </table>
-          <div class="card-date">12:30</div>
-        </div>
-        <div class="card">
-          <table>
-            <tr>
-              <td class="card-title">标题</td>
-            </tr>
-            <tr>
-              <td class="card-content">腾龙AR模块收款功能中付款方法项目增加还有问题</td>
-            </tr>
-          </table>
-          <div class="card-date">12:30</div>
-        </div>
-      </td>
-      <td align="center" class="td_c">
-        <div class="card">
-          <table>
-            <tr>
-              <td class="card-title">标题</td>
-            </tr>
-            <tr>
-              <td class="card-content">腾龙AR模块收款功能中付款方法项目增加还有问题</td>
-            </tr>
-          </table>
-          <div class="card-date">12:30</div>
-        </div>
-        <div class="card">
-          <table>
-            <tr>
-              <td class="card-title">标题</td>
-            </tr>
-            <tr>
-              <td class="card-content">腾龙AR模块收款功能中付款方法项目增加还有问题</td>
-            </tr>
-          </table>
-          <div class="card-date">12:30</div>
-        </div>
-      </td>
-      <td align="center" class="td_c">
-        <div class="card">
-          <table>
-            <tr>
-              <td class="card-title">标题</td>
-            </tr>
-            <tr>
-              <td class="card-content">腾龙AR模块收款功能中付款方法项目增加还有问题</td>
-            </tr>
-          </table>
-          <div class="card-date">12:30</div>
-        </div>
-      </td>
-      <td align="center" class="td_r">
-        <div class="card">
-          <table>
-            <tr>
-              <td class="card-title">标题</td>
-            </tr>
-            <tr>
-              <td class="card-content">腾龙AR模块收款功能中付款方法项目增加还有问题</td>
-            </tr>
-          </table>
-          <div class="card-date">12:30</div>
-        </div>
-        <div class="card">
-          <table>
-            <tr>
-              <td class="card-title">标题</td>
-            </tr>
-            <tr>
-              <td class="card-content">腾龙AR模块收款功能中付款方法项目增加还有问题</td>
-            </tr>
-          </table>
-          <div class="card-date">12:30</div>
-        </div>
-        <div class="card">
-          <table>
-            <tr>
-              <td class="card-title">标题</td>
-            </tr>
-            <tr>
-              <td class="card-content">腾龙AR模块收款功能中付款方法项目增加还有问题</td>
-            </tr>
-          </table>
-          <div class="card-date">12:30</div>
-        </div>
-      </td>
-    </tr>
-  </table>
-</div>
+<%= render :partial => "irm/kanbans/kanban_main", :locals => {:kanban => @kanban}%>
