--- a/app/views/irm/kanbans/show.html.erb
+++ b/app/views/irm/kanbans/show.html.erb
@@ -68,12 +68,14 @@
           <div id="owned_lanes_list" class="datatable" style="width:100%;">
             <div id="id" style="display:none">
               <%= icon_link_remove({:controller=>"irm/kanbans",:action=>"delete_lane",:lane_id=>"{irm_lane_id}",:kanban_id => @kanban.id},:confirm => t(:label_are_you_sure) ,
-                                      :method => :delete) %>
+                                      :method => :delete) %>&nbsp;
+              <%= icon_link("btn_up", t(:move_up), {:controller => "irm/kanbans", :action => "up_lane", :kanban_id => @kanban.id, :lane_id => "{irm_lane_id}"})%>&nbsp;
+              <%= icon_link("btn_down", t(:move_down), {:controller => "irm/kanbans", :action => "down_lane", :kanban_id => @kanban.id, :lane_id => "{irm_lane_id}"})%>
             </div>
           </div>
           <!-- Begin company access table -->
             <%= datatable("owned_lanes_list",url_for(:controller=>"irm/kanbans",:action=>"get_owned_lanes",:id=>@kanban.id),
-                              [{:key=>"id",:label=>t(:operation),:formatter=>"Y.irm.template",:width=>"40px"},
+                              [{:key=>"id",:label=>t(:operation),:formatter=>"Y.irm.template",:width=>"80px"},
                                {:key => "irm_lane_id", :hidden =>true},
                                {:key=>"lane_code",:label=>t(:label_irm_lane_code),:width => "150px"},
                                {:key=>"lane_name",:label=>t(:name), :width => "150px"},
