在页面局中添加统一的javascript区域

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,6 +19,9 @@
       });
     });
   </script>
+  <% if content_for?(:page_script) %>
+    <%=javascript_tag(yield :page_script)%>
+  <% end %>
   <%= render :partial => "irm/common/address_bar_logo" %>
 </head>
 <body id ="homePage" class="homeTab homepage sfdcBody yui3-skin-sam yui-skin-sam">
