--- a/app/views/icm/incident_requests/index.html.erb
+++ b/app/views/icm/incident_requests/index.html.erb
@@ -28,7 +28,7 @@
 </div>
 
 <% if allow_to_function?(:view_reports) %>
-<%= render "/irm/report_lists/report_category",{:category_code=>"INCIDENT_REQUEST",:options=>{:report_purpose=>"REPORT"}} %>
+  <%= render :partial => "/irm/reports/report_lists",:locals=>{:bo_model_name=>Icm::IncidentRequest.name} %>
 <% end %>
 
 <% content_for :sidebar do%>
