修正报表文件夹bug

--- a/app/views/irm/report_folders/_edit_form.html.erb
+++ b/app/views/irm/report_folders/_edit_form.html.erb
@@ -4,7 +4,7 @@
       vertical-align:middle;
   }
 </style>
-<%= form_for(@report_folder,:url=>{:action=>"create"},:builder => LabellingFormBuilder) do |f| %>
+<%= form_for(@report_folder,:url=>{:action=>"update"},:builder => LabellingFormBuilder) do |f| %>
 <div id="ep" class="bEditBlock bPageBlock">
   <div class="pbHeader">
     <table cellpadding="0" cellspacing="0" border="0">
