--- a/app/views/irm/cards/edit_rule.html.erb
+++ b/app/views/irm/cards/edit_rule.html.erb
@@ -1,5 +1,6 @@
 <%= setting_title({:title => @card[:name]}) %>
 <%= form_for(@card,:url=>{:action=>"update_rule"},:builder => LabellingFormBuilder) do |f| %>
+<%= f.hidden_field :return_url, :value => @return_url %>
 <div id="ep" class="bEditBlock bPageBlock">
   <div class="pbHeader">
     <table cellpadding="0" cellspacing="0" border="0">
@@ -8,7 +9,11 @@
           <td class="pbTitle"><h2 class="mainTitle"><%=t(:label_irm_card_rule_edit)%></h2></td>
           <td id="topButtonRow" class="pbButton">
             <div class="button"><%= f.submit t(:save)%></div>
-            <div class="button"><%= link_to t(:cancel), {:action=>"index"}%></div>
+            <% if !@return_url.present? %>
+                <div class="button"><%= link_to t(:cancel), {:action=>"index"}%></div>
+            <% else %>
+                <div class="button"><%= link_to t(:cancel), @return_url%></div>
+            <% end %>
           </td>
         </tr>
       </tbody>
