--- a/app/views/irm/reports/show.html.erb
+++ b/app/views/irm/reports/show.html.erb
@@ -80,7 +80,9 @@
         <tr>
           <td id="topButtonRow" class="pbButton" colspan="2">
             <div class="button"><%= f.submit t :label_irm_report_run%></div>
-            <div class="button"><%= link_to t(:edit), {:action => "edit", :id => @report.id}%></div>
+            <% if @report.editable(@report[:access_type],@report[:member_type],Irm::Person.current.id) %>
+              <div class="button"><%= link_to t(:edit), {:action => "edit", :id => @report.id}%></div>
+            <% end %>
             <div class="button"><%= link_to t(:label_irm_report_custom), {:action => "edit_custom"},{:class=>"submit"} %></div>
             <div class="button"><%= link_to t(:new), {:action => "new"}%></div>
             <div class="button"><%= link_to t(:back), {:action => "index"}%></div>
