让LANE中可以放入不同的CARD，并统一进行按日期排序

--- a/app/views/irm/home/index.html.erb
+++ b/app/views/irm/home/index.html.erb
@@ -28,14 +28,9 @@
         <table class="toolsContent">
             <tbody>
                 <tr>
-                  <td>
-                    <div class="toolsContentLeft first">
-                      <%= render :partial => "irm/common/over_view" %>
-                    </div>
-                  </td>
-                  <td>
+                  <td colspan="2">
                     <div class="toolsContentRight first">
-                      <%= render :partial => "irm/todo_tasks/top_data_grid" %>
+                      <%= render :partial => "irm/kanbans/kanban_main"%>
                     </div>
                   </td>
                 </tr>
