--- a/app/views/irm/kanbans/_kanban_main.html.erb
+++ b/app/views/irm/kanbans/_kanban_main.html.erb
@@ -44,7 +44,7 @@
 .kanban_body .th_r{border-left: 1px solid #ffffff;}
 .kanban_body .th_c{border-right: 1px solid #ffffff;border-left: 1px solid #ffffff;}
 </style>
-<% if Irm::Role.current%>
+<% if Irm::Role.current && !Irm::Role.current.kanban.nil?%>
 <% kanban = Irm::Role.current.kanban %>
 <% else %>
 <% kanban = Irm::Kanban.enabled.first %>
