--- a/app/views/irm/home/index.html.erb
+++ b/app/views/irm/home/index.html.erb
@@ -15,7 +15,8 @@
       </div>
     </div>
     <div class="links">
-      <a onclick="window.open ('/pagehelpfiles/home.html', 'Ironmine_Help', 'height=800px, width=870px, top=0, left=0, toolbar=no, menubar=no,scrollbars=yes, location=no, status=no');" href="#"><%=t(:current_page_help)%></a></div>
+      <a onclick="window.open ('/pagehelpfiles/home.html', 'Ironmine_Help', 'height=800px, width=870px, top=0, left=0, toolbar=no, menubar=no,scrollbars=yes, location=no, status=no');" href="#"><%=t(:current_page_help)%></a>
+    </div>
   </div>
 </div>
 <div class="pbSubsection" id="templateBody" style="display:none" current="portal">
@@ -27,13 +28,6 @@
     <div id="tab_portal">
         <table class="toolsContent">
             <tbody>
-                <tr>
-                  <td colspan="2">
-                    <div class="toolsContentRight first">
-                      <%= render :partial => "irm/kanbans/kanban_main"%>
-                    </div>
-                  </td>
-                </tr>
                 <tr>
                   <td colspan="2">
                     <div class="toolsContentRight">
