--- a/app/views/irm/home/index.html.erb
+++ b/app/views/irm/home/index.html.erb
@@ -30,7 +30,7 @@
             <tbody>
                 <tr>
                   <td colspan="2">
-                    <div class="toolsContentRight">
+                    <div class="toolsContentRight first">
                       <%= render :partial => "irm/bulletins/bulletin_portlet" %>
                     </div>
                   </td>
