--- a/app/views/irm/reports/index.html.erb
+++ b/app/views/irm/reports/index.html.erb
@@ -40,7 +40,13 @@
       <div class="pbBody">
         <div id="report_list" class="datatable" style="width:100%;">
           <div id="name" style="display:none">
-            <%=link_to("{name}",{:action=>"show",:id=>"{id}"}) %>
+            if('{report_trigger_id}' != ''){
+              '<%=link_to("{name}",{:action=>"show",:id=>"{id}"}) %> <%=link_to(content_tag(:img,nil,:src=>theme_image_path("s.gif"),:class=>"scheduledIcon"),{:controller=>"irm/report_triggers",:action=>"edit",:id=>"{report_trigger_id}"}) %>'
+
+            }
+            else{
+              '<%=link_to("{name}",{:action=>"show",:id=>"{id}"}) %>'
+            }
           </div>
           <div id="id" class="id" style="display:none">
             if('{editable_flag}' == 'true'){
@@ -53,10 +59,11 @@
         </div>
         <%= datatable("report_list",url_for(:action=>"get_data", :folder_id => @folder_id,:format=>"json"),
                   [{:key=>"id",:label=>t(:operation),:formatter=>"Y.irm.stemplate", :width => "90px"},
-                   {:key=>"name",:label=>t(:label_irm_report_name),:formatter=>"Y.irm.template", :sortable=>true,:searchable=>true,:width=>"250px"},
-                   @folder_id.present? ? nil:{:key=>"report_folder_name",:label=>t(:label_irm_report_folder),:sortable=>true, :width => "100px"} ,
-                   {:key=>"report_type_name",:label=>t(:label_irm_report_type),:sortable=>true, :width => "100px"},
+                   {:key=>"name",:label=>t(:label_irm_report_name),:formatter=>"Y.irm.stemplate", :sortable=>true,:searchable=>true,:width=>"250px"},
+                   @folder_id.present? ? nil:{:key=>"report_folder_name",:label=>t(:label_irm_report_folder),:sortable=>true, :width => "150px"} ,
+                   {:key=>"report_type_name",:label=>t(:label_irm_report_type),:sortable=>true, :width => "150px"},
                    {:key=>"editable_flag",:hidden=>true},
+                   {:key=>"report_trigger_id",:hidden=>true},
                    {:key=>"description",:label=>t(:label_irm_report_description)}].compact,
                    {:search_box=>"reportListSearchBox",:paginator_box=>"regionPaginator"})%>
         <div id="regionPaginator"></div>
