--- a/app/views/uid/external_systems/show.html.erb
+++ b/app/views/uid/external_systems/show.html.erb
@@ -52,3 +52,25 @@
     </div>
   </div>
 </div>
+
+<div class="listRelatedObject setupBlock">
+    <div class="bPageBlock">
+      <div class="pbHeader">
+        <table cellpadding="0" cellspacing="0" border="0">
+          <tbody>
+            <tr>
+              <td class="pbTitle"><h2 class="mainTitle"><%= t(:label_uid_external_system_people) %></h2></td>
+              <td class="pbButton">
+                <div class="button"></div>
+              </td>
+              <td class="pbHelp">
+              </td>
+            </tr>
+          </tbody>
+        </table>
+      </div>
+      <div class="pbBody">
+
+      </div>
+    </div>
+</div>
