--- a/app/views/irm/common/_quick_create.html.erb
+++ b/app/views/irm/common/_quick_create.html.erb
@@ -22,10 +22,10 @@
                   <%= link_to_checker(raw(get_img_icon("img7", {:class => "mruIcon", :title => t(:label_irm_bulletin)}, "Small") ) + t(:label_irm_bulletin),
                                       {:controller => "irm/bulletins", :action => "new"},
                                       {:class => "menuButtonMenuLink"})%>
-                  <%= link_to_checker(raw(get_img_icon("img2", {:class => "mruIcon", :title => t(:label_irm_todo_event)}, "Small") ) + t(:label_irm_todo_event),
+                  <% link_to_checker(raw(get_img_icon("img2", {:class => "mruIcon", :title => t(:label_irm_todo_event)}, "Small") ) + t(:label_irm_todo_event),
                                       {:controller => "irm/todo_events", :action => "new"},
                                       {:class => "menuButtonMenuLink"})%>
-                  <%= link_to_checker(raw(get_img_icon("img2", {:class => "mruIcon", :title => t(:label_irm_todo_task)}, "Small") ) + t(:label_irm_todo_task),
+                  <% link_to_checker(raw(get_img_icon("img2", {:class => "mruIcon", :title => t(:label_irm_todo_task)}, "Small") ) + t(:label_irm_todo_task),
                                       {:controller => "irm/todo_tasks", :action => "new"},
                                       {:class => "menuButtonMenuLink"})%>
             </div>
