--- a/app/views/icm/incident_requests/_new_form.html.erb
+++ b/app/views/icm/incident_requests/_new_form.html.erb
@@ -284,7 +284,7 @@ GY.use('irm','node','substitute','yui2-editor', function(Y) {
               if (Y.one("#container_applet_upload_c")){
                 Y.one("#container_applet_upload_c").remove();
               }
-              dialog.setBody("<iframe frameborder=0 scrolling='no'  src='/common/upload_screen_shot' class='screen_shot_frame'></iframe>");
+              dialog.setBody("<iframe frameborder=0 scrolling='no'  src='/common/upload_screen_shot?target=" + render_target+ "' class='screen_shot_frame'></iframe>");
               dialog.setHeader('<%= t :upload_from_clipboard%>');
               dialog.render(document.body);
               dialog.center();
